log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 10:56:27 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7332960
Wed 29 Mar 2023 10:56:41 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d674e2d
Wed 29 Mar 2023 10:57:00 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
6936fa9
Wed 29 Mar 2023 10:57:37 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
05e11d5
Wed 29 Mar 2023 10:59:42 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
302b532
Wed 29 Mar 2023 11:00:47 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a1bd7f8
Wed 29 Mar 2023 11:01:40 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8710dc3
Wed 29 Mar 2023 11:06:19 PM UTC: 
 arraylist.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:38:7: error: ‘list’ undeclared (first use in this function)
   38 |   if (list->size==list->capacity)
      |       ^~~~
arraylist.c:38:7: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:45:5: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   45 |     size++;
      |     ^~~~
      |     dysize
Compilation failed
aa09681
Wed 29 Mar 2023 11:06:36 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:45:5: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   45 |     size++;
      |     ^~~~
      |     dysize
arraylist.c:45:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c575526
Wed 29 Mar 2023 11:06:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c615ba5
Wed 29 Mar 2023 11:09:20 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
82de009
Wed 29 Mar 2023 11:09:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8cbd0ff
Wed 29 Mar 2023 11:10:19 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
fccf380
Wed 29 Mar 2023 11:15:28 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
0e78f1a
Wed 29 Mar 2023 11:15:53 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
becd8b3
Wed 29 Mar 2023 11:20:43 PM UTC: 
 arraylist.c | 32 ++++++++++++++++++++++++++++----
 1 file changed, 28 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 20/70
34df958
Wed 29 Mar 2023 11:30:50 PM UTC: 
 arraylist.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 30/70
dc9cba7
Wed 29 Mar 2023 11:32:51 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:101:1: error: control reaches end of non-void function [-Werror=return-type]
  101 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d31639c
Wed 29 Mar 2023 11:35:36 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:100:10: error: unused variable ‘contador’ [-Werror=unused-variable]
  100 |   size_t contador=0;
      |          ^~~~~~~~
arraylist.c:104:1: error: control reaches end of non-void function [-Werror=return-type]
  104 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
30af430
